--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -2033,29 +2033,29 @@
 /* Fonts */
 @font-face {
   font-family: "Open Sans";
-  src: url('../fonts/OpenSans-Light-webfont.eot?1429364454');
-  src: url('../fonts/OpenSans-Light-webfont.eot?&1429364454#iefix') format('embedded-opentype'), url('../fonts/OpenSans-Light-webfont.woff?1429364454') format('woff'), url('../fonts/OpenSans-Light-webfont.ttf?1429364454') format('truetype'), url('../fonts/OpenSans-Light-webfont.svg?1429364454') format('svg');
+  src: url('../fonts/OpenSans-Light-webfont.eot?1420464718');
+  src: url('../fonts/OpenSans-Light-webfont.eot?&1420464718#iefix') format('embedded-opentype'), url('../fonts/OpenSans-Light-webfont.woff?1420464718') format('woff'), url('../fonts/OpenSans-Light-webfont.ttf?1420464718') format('truetype'), url('../fonts/OpenSans-Light-webfont.svg?1420464718') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "Open Sans";
-  src: url('../fonts/OpenSans-Regular-webfont.eot?1429364454');
-  src: url('../fonts/OpenSans-Regular-webfont.eot?&1429364454#iefix') format('embedded-opentype'), url('../fonts/OpenSans-Regular-webfont.woff?1429364454') format('woff'), url('../fonts/OpenSans-Regular-webfont.ttf?1429364454') format('truetype'), url('../fonts/OpenSans-Regular-webfont.svg?1429364454') format('svg');
+  src: url('../fonts/OpenSans-Regular-webfont.eot?1420464718');
+  src: url('../fonts/OpenSans-Regular-webfont.eot?&1420464718#iefix') format('embedded-opentype'), url('../fonts/OpenSans-Regular-webfont.woff?1420464718') format('woff'), url('../fonts/OpenSans-Regular-webfont.ttf?1420464718') format('truetype'), url('../fonts/OpenSans-Regular-webfont.svg?1420464718') format('svg');
   font-weight: bold;
   font-style: normal;
 }
 @font-face {
   font-family: "Open Sans";
-  src: url('../fonts/OpenSans-LightItalic-webfont.eot?1429364454');
-  src: url('../fonts/OpenSans-LightItalic-webfont.eot?&1429364454#iefix') format('embedded-opentype'), url('../fonts/OpenSans-LightItalic-webfont.woff?1429364454') format('woff'), url('../fonts/OpenSans-LightItalic-webfont.ttf?1429364454') format('truetype'), url('../fonts/OpenSans-LightItalic-webfont.svg?1429364454') format('svg');
+  src: url('../fonts/OpenSans-LightItalic-webfont.eot?1420464718');
+  src: url('../fonts/OpenSans-LightItalic-webfont.eot?&1420464718#iefix') format('embedded-opentype'), url('../fonts/OpenSans-LightItalic-webfont.woff?1420464718') format('woff'), url('../fonts/OpenSans-LightItalic-webfont.ttf?1420464718') format('truetype'), url('../fonts/OpenSans-LightItalic-webfont.svg?1420464718') format('svg');
   font-weight: normal;
   font-style: italic;
 }
 @font-face {
   font-family: "Open Sans";
-  src: url('../fonts/OpenSans-Italic-webfont.eot?1429364454');
-  src: url('../fonts/OpenSans-Italic-webfont.eot?&1429364454#iefix') format('embedded-opentype'), url('../fonts/OpenSans-Italic-webfont.woff?1429364454') format('woff'), url('../fonts/OpenSans-Italic-webfont.ttf?1429364454') format('truetype'), url('../fonts/OpenSans-Italic-webfont.svg?1429364454') format('svg');
+  src: url('../fonts/OpenSans-Italic-webfont.eot?1420464718');
+  src: url('../fonts/OpenSans-Italic-webfont.eot?&1420464718#iefix') format('embedded-opentype'), url('../fonts/OpenSans-Italic-webfont.woff?1420464718') format('woff'), url('../fonts/OpenSans-Italic-webfont.ttf?1420464718') format('truetype'), url('../fonts/OpenSans-Italic-webfont.svg?1420464718') format('svg');
   font-weight: bold;
   font-style: italic;
 }
@@ -4931,6 +4931,8 @@ html, body {
   }
   .flex-row > *,
   .flex-col > * {
+    -webkit-flex-shrink: 0;
+    flex-shrink: 0;
     position: relative;
   }
   .flex-row > * > *:first-child,
@@ -4955,21 +4957,29 @@ html, body {
   .flex-1 {
     -webkit-flex: 1;
     flex: 1;
+    -webkit-flex-shrink: 1;
+    flex-shrink: 1;
   }
 
   .flex-2 {
     -webkit-flex: 2;
     flex: 2;
+    -webkit-flex-shrink: 1;
+    flex-shrink: 1;
   }
 
   .flex-3 {
     -webkit-flex: 3;
     flex: 3;
+    -webkit-flex-shrink: 1;
+    flex-shrink: 1;
   }
 
   .flex-4 {
     -webkit-flex: 4;
     flex: 4;
+    -webkit-flex-shrink: 1;
+    flex-shrink: 1;
   }
 }
 /* Header, Body, Footer */
